WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160005
Do not keep invalid IOSurface in ImageBufferData.
https://bugs.webkit.org/show_bug.cgi?id=160005
Summary
Do not keep invalid IOSurface in ImageBufferData.
alan
Reported
2016-07-20 19:41:40 PDT
If we fail to construct a valid accelerate surface (IOSurface) for the ImageBuffer, remove it from ImageBufferData.
Attachments
Patch
(1.76 KB, patch)
2016-07-20 20:05 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2016-07-20 19:43:13 PDT
rdar://problem/27208636
alan
Comment 2
2016-07-20 20:05:23 PDT
Created
attachment 284184
[details]
Patch
alan
Comment 3
2016-07-20 20:05:54 PDT
bug 160006
is related.
WebKit Commit Bot
Comment 4
2016-07-21 11:21:19 PDT
Comment on
attachment 284184
[details]
Patch Clearing flags on attachment: 284184 Committed
r203514
: <
http://trac.webkit.org/changeset/203514
>
WebKit Commit Bot
Comment 5
2016-07-21 11:21:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug